Fix bug where rare projects could not be restarted. Fix responsive alignment.

--- a/src/components/Cards/LargeCard/LargeCard.scss
+++ b/src/components/Cards/LargeCard/LargeCard.scss
@@ -122,6 +122,15 @@
     font-size: 10px;
     color: #FF9D14;
     text-shadow: 0 0 10px rgba(255, 157, 20, 0.9);
+
+    @include for-big-desktop {
+      font-size: 18px;
+      height: 25px;
+      width: 78px;
+      text-align: center;
+      bottom: 355px;
+      left: 64px;
+    }
   }
 
   .title {
